tests/analyzer/errors/imports.rv
use .pipou
use .data.mathh
use .data.trash.trash2

fn main() {
    {
        use .data.math
    }
}
